======================
    ADDED: some GUI touch-ups: make buttons smaller, and bars leaner. all in all, the
           thing should look better.
    ADDED: FreeBSD compatability issues - patchs by Heiner, thanks man!
    ADDED: move to next-gen view (at last)
          TODO: dragn'drop quirky.
          TODO: add progressbar to totals (?)

    FIXED: popup-menu poping out of place.
    FIXED: Panel & PanelFunc permission clean up.
    FIXED: krBack() clean up.
    FIXED: moved all the logic from ListPanel to ListPanelFunc
    FIXED: integrated the openUrl() API.
    FIXED: minor bug in mountman
    FIXED: bug in arc_vfs, concerning full-paths in tars (thanks Heiner)

    REMOVED: Tree & Quickview panels.

1.11 KDE 3
======================
    ADDED: updated Swedish translation, thanks to Anders Linden.
    ADDED: new Spanish translation, thanks to Rafa Munoz.
    ADDED: new Polish translation, thanks to Lukasz Janyst.

    FIXED: Changed the internal viewer default from Hex to Text.
    FIXED: Crash when Krusader is called with open viewer/internal editor.
    FIXED: Keyboard shortcuts not saved in Konfigurator.    

1.10 - KDE 3
======================
    ADDED: new and improved viewer.
    ADDED: Krename support ! (more info at: http://krename.sf.net )
    ADDED: you can now use the command line to "cd" into konqi-supported urls.
           ( try: cd audiocd:/?dev=/dev/cdrom )
    ADDED: you can try to execute files in remote filesystem.
    ADDED: new command detection function instead of using 'which'

    FIXED: rewritten the panel sorting function, it should be better and faster now.
    FIXED: back to KRDirWatch, since KDirWatch crashed us on systems with FAM enabled.
    FIXED: removed the "panel start path is invalid" error message. if the start
           path is invalid try to find the closest path (the previous solution was '/');
    FIXED: don't watch read-only/not-readable directories - this should improve performance