@@ -5,6 +5,7 @@
     ADDED: move to next-gen view (at last)
           TODO: dragn'drop quirky.
           TODO: add progressbar to totals (?)
+          TODO: COMPAREMODE
 
     FIXED: popup-menu poping out of place.
     FIXED: Panel & PanelFunc permission clean up.
@@ -13,6 +14,7 @@
     FIXED: integrated the openUrl() API.
     FIXED: minor bug in mountman
     FIXED: bug in arc_vfs, concerning full-paths in tars (thanks Heiner)
+    FIXED: right align size column
 
     REMOVED: Tree & Quickview panels.
 
